visibility fixed

--- a/src/app/components/signup/signup.component.css
+++ b/src/app/components/signup/signup.component.css
@@ -77,3 +77,17 @@ form h2{
 ::ng-deep mat-spinner circle:hover{
   stroke: white;
 }
+
+
+.pass-field{
+  position: relative;
+  width: 100%;
+}
+
+
+.pass-field button{
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+}
